# bigdata-taxi-mongodb

./: .gitignore  README.md  pyproject.toml
db_scripts/: agg_trips_pipeline.py
docs/: architecture.md
src/aggregation/: aggregate_data.py
src/cleaning/: clean_data.py
src/dashboard/: app.py
src/ingestion/: load_raw.py
src/models/: trip_model.py
src/utils/: db.py  logging_config.py
tests/: test_aggregation.py  test_cleaning.py  test_db_connection.py
